# calmi

./: .gitignore  Cargo.toml  README.md  auth.ts  compose.yml  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  todo.md  vitest.config.ts  vitest.setup.ts
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: task.md
.github/instructions/: aboutComments.instructions.md  aboutVersions.instructions.md
.github/workflows/: ci.yml
activity_pub/: Cargo.toml
activity_streams/: Cargo.toml
activity_streams/macros/: Cargo.toml
calmi_activity_streams/src/: types.rs
calmi_webfinger/src/: types.rs
macros/src/: lib.rs
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20251102_073848_create_note_table.rs  m20251102_170000_add_to_field_to_note.rs  m20251106_000001_create_interactions_tables.rs
prisma/: schema.prisma
public/: manifest.json
src/: activity_pub.rs  activity_streams_mapper.rs  activitypub.rs  actor.rs  app.rs  app_state.rs  config.rs  lib.rs  main.rs  theme-provider.tsx  types.rs  users.rs  webfinger.rs
src/__tests__/: next-auth-mock.test.tsx  test-utils.test.tsx
src/activity_pub/: mapper.rs
src/activitypub/: activity.rs  actor.rs  properties.rs  specs_memo.md  types.rs  webfinger.rs
src/app/: MisskeyApiClientContext.tsx  MisskeyApiProvider.tsx  globals.css  handlers.rs  (+11 more)
tests/: activitypub_get_path_users_username_notes_id_activity_test.rs  activitypub_get_path_users_username_notes_id_test.rs  activitypub_get_path_users_username_test.rs  activitypub_post_inbox_interactions_test.rs  activitypub_spec_test.rs  activitypub_test.rs  helper.rs  webfinger_test.rs
webfinger/: Cargo.toml
(+273 files in other folders)
