[workspace]
members = [".", "macros"]

[package]
name = "calmi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
calmi_macros = { path = "macros" }

[dev-dependencies]
axum-test = "18.2.1"
