[workspace]
members = [".", "macros", "migration"]

[package]
name = "calmi"
version = "0.1.0"
edition = "2024"

[dependencies]
calmi_macros = { path = "macros" }

axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
async-trait = "0.1.89"

[dev-dependencies]
axum-test = "18.2.1"
