[workspace]
members = [".", "migration", "activity_streams", "webfinger" ]

[package]
name = "calmi"
version = "0.1.0"
edition = "2024"

[dependencies]
calmi_activity_streams = { path = "activity_streams" }
calmi_webfinger = { path = "webfinger" }

axum = "0.8.6"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
async-trait = "0.1.89"

[dev-dependencies]
axum-test = "18.2.1"
migration = { path = "migration" }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
